메인슬라이더가 끝남 ㅎㅎ

--- a/css/style.css
+++ b/css/style.css
@@ -193,10 +193,35 @@ main {
             bottom: 0;
             display: flex;
             width: 60%;
-            height: 70px;
+            height: 7rem;
+            justify-content: space-between;
+            align-items: center;
+            .bar-wrap {
+              width: 12rem;
+              height: 0.4rem;
+              border-radius: 2rem;
+              background: var(--ibk-secondary-color);
+              .progress-bar {
+                display: block;
+                width: 10px;
+                height: inherit;
+                background: #0d020f;
+              }
+            }
             ul {
               display: flex;
             }
+          }
+          .control-btn-wrap::before {
+            content: '';
+            display: block;
+            width: 10rem;
+            height: 7.2rem;
+            background: url(../images/deco_banner.svg);
+            background-size: 100%;
+            position: absolute;
+            right: -4rem;
+            bottom: -0.2rem;
           }
         }
       }
