--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,25 @@ main {
                 background: #0d020f;
               }
             }
+            .play-stop {
+              li {
+                .icon {
+                  border: none;
+                  display: block;
+                  width: 100%;
+                  height: 100%;
+                  text-indent: -9999px;
+                }
+
+                .playStop-btn {
+                }
+                .next-btn {
+                }
+              }
+              li:first-child {
+                background-image: url(../images/icon_line.svg);
+              }
+            }
             ul {
               display: flex;
             }
