--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,15 @@
 body {
   line-height: 3rem;
   color: var(--ibk-text-color);
+  font-size: 1.6rem;
 }
 
 .content-center {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  /* 4의 배수로 */
+  padding: 0 1.6rem;
   background-color: rgba(255, 0, 0, 0.2);
 }
 
@@ -133,140 +136,119 @@ header {
 }
 
 /* main */
-main {
-  .cm-wrap {
-    .cm-top-wrap {
-      display: flex;
-      justify-content: space-between;
-      .cm-top-left {
-        width: calc(100% / 3 * 2);
-        .cm-slider-wrap {
-          position: relative;
-          background-color: skyblue;
-          border-radius: 5rem 5rem 5rem 10rem;
-          min-height: 500px;
-          height: 50rem;
-          .cm-slider-list-text {
-            height: 100%;
-            li {
-              position: absolute;
-              padding: 3rem;
-              height: inherit;
-              a {
-                > span {
-                  background: var(--ibk-main-color);
-                  padding: 5px 10px;
-                  border-radius: 30px;
-                  color: white;
-                }
-                strong {
-                  font-size: 3rem;
-                }
-                .more-btn {
-                  font-size: 2rem;
-                  background-color: white;
-                  color: #0055a2;
-                  padding: 10px 30px;
-                  position: absolute;
-                  bottom: 100px;
-                }
-              }
-            }
-          }
-          .cm-sliber-list-img {
-            position: absolute;
-            width: 50%;
-            right: 0;
-            top: 0;
-            li {
-              /* position: absolute; */
-              img {
-                width: 100%;
-              }
-            }
-          }
-          .control-btn-wrap {
-            position: absolute;
-            background: white;
-            border-radius: 0 3.5rem 0 0;
-            left: 0;
-            bottom: 0;
-            display: flex;
-            width: 60%;
-            height: 7rem;
-            justify-content: space-between;
-            align-items: center;
-            .bar-wrap {
-              width: 12rem;
-              height: 0.4rem;
-              border-radius: 2rem;
-              background: var(--ibk-secondary-color);
-              .progress-bar {
-                display: block;
-                width: 10px;
-                height: inherit;
-                background: #0d020f;
-              }
-            }
-            .play-stop {
-              li {
-                .icon {
-                  border: none;
-                  display: block;
-                  width: 100%;
-                  height: 100%;
-                  text-indent: -9999px;
-                }
+.cm-wrap {
+  .cm-top-wrap {
+    display: flex;
+    justify-content: space-between;
+    .cm-top-left {
+      width: calc(100% / 3 * 2);
 
-                .playStop-btn {
-                }
-                .next-btn {
-                }
-              }
-              li:first-child {
-                background-image: url(../images/icon_line.svg);
-              }
-            }
-            ul {
-              display: flex;
-            }
-          }
-          .control-btn-wrap::before {
-            content: '';
-            display: block;
-            width: 10rem;
-            height: 7.2rem;
-            background: url(../images/deco_banner.svg);
-            background-size: 100%;
+      .cm-slider-wrap {
+        position: relative;
+        background-color: skyblue;
+        border-radius: 5rem 5rem 5rem 10rem;
+        min-height: 500px;
+        height: 50rem;
+        .cm-slider-list-text {
+          height: 100%;
+          li {
             position: absolute;
-            right: -4rem;
-            bottom: -0.2rem;
+            padding: 3rem;
+            height: inherit;
+            a {
+              > span {
+                background: var(--ibk-main-color);
+                padding: 5px 20px;
+                border-radius: 30px;
+                color: white;
+              }
+              strong {
+                font-size: 3rem;
+              }
+              .more-btn {
+                font-size: 2rem;
+                background: white;
+                color: #0055a2;
+                padding: 10px 30px;
+                position: absolute;
+                bottom: 100px;
+              }
+            }
           }
         }
-      }
-      .cm-top-right {
-        width: calc(100% / 3);
-        ul {
-          display: flex;
-          flex-wrap: wrap;
+        .cm-slider-list-img {
+          position: absolute;
+          width: 50%;
+          right: 0;
+          top: 0;
           li {
-            width: 50%;
-            padding: 5px;
-            a {
+            img {
+              width: 100%;
+            }
+          }
+        }
+        .control-btn-wrap {
+          position: absolute;
+          background: white;
+          border-radius: 8rem;
+          left: 0;
+          bottom: 0;
+          display: flex;
+          width: 60%;
+          height: 7.2rem;
+          justify-content: space-between;
+          align-items: center;
+          .bar-wrap {
+            width: 12rem;
+            height: 0.4rem;
+            border-radius: 2rem;
+            background: var(--ibk-secondary-color);
+            .progress-bar {
               display: block;
-              background: var(--ibk-main-bg-color);
-              border-radius: 4rem;
-              height: 16rem;
-              padding: 2.5rem;
-              strong {
-                display: block;
-                font-size: 2rem;
-                font-weight: 700;
-              }
-              span {
-                font-size: 2rem;
-                line-height: 3rem;
-              }
+              width: 10px;
+              height: inherit;
+              background: #0d020f;
+            }
+          }
+          ul {
+            display: flex;
+          }
+        }
+        .control-btn-wrap::before {
+          content: '';
+          display: block;
+          width: 10rem;
+          height: 7.2rem;
+          background: url(../images/deco_banner.svg);
+          background-size: 100%;
+          position: absolute;
+          right: -4rem;
+          bottom: -0.2rem;
+        }
+      }
+    }
+    .cm-top-right {
+      width: calc(100% / 3);
+      ul {
+        display: flex;
+        flex-wrap: wrap;
+        li {
+          width: 50%;
+          padding: 5px;
+          a {
+            display: block;
+            background: var(--ibk-main-bg-color);
+            border-radius: 4rem;
+            height: 16rem;
+            padding: 2.5rem;
+            strong {
+              display: block;
+              font-size: 2rem;
+              font-weight: 700;
+            }
+            span {
+              font-size: 2rem;
+              line-height: 3rem;
             }
           }
         }
@@ -275,3 +257,131 @@ main {
   }
 }
 /* footer */
+footer {
+  .footer-top {
+    border-top: 1px solid var(--ibk-main-bg-color);
+    padding: 2rem 0;
+    .footer-check {
+      display: flex;
+      gap: 2rem;
+      li {
+        a {
+          display: block;
+          background: var(--ibk-main-color);
+          color: white;
+          padding: 0 1.6rem;
+          font-size: 1.4rem;
+          font-weight: 700;
+          border-radius: 3rem;
+        }
+      }
+    }
+  }
+
+  .footer-middle {
+    background: var(--ibk-main-bg-color);
+    line-height: 7rem;
+
+    .footer-menu {
+      display: flex;
+      gap: 3.5rem;
+      li {
+        position: relative;
+        a {
+        }
+      }
+      li::after {
+        content: '';
+        display: block;
+        width: 4px;
+        height: 4px;
+        background-color: red;
+        position: absolute;
+        right: -2rem;
+        top: 50%;
+        transform: translateY(-50%);
+        border-radius: 50%;
+      }
+      li:last-child::after {
+        display: none;
+      }
+      li:first-child {
+        color: var(--ibk-main-color);
+      }
+    }
+  }
+
+  .footer-bottom {
+    padding: 5rem 0;
+
+    > div > div {
+      display: flex;
+      justify-content: space-between;
+      address {
+      }
+      .smart-wrap {
+        display: flex;
+        gap: 3rem;
+        .smart-qr {
+          width: 10rem;
+          border-radius: 1rem;
+          overflow: hidden;
+          box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+        }
+        .smart {
+          a {
+            font-size: 1.8rem;
+            color: var(--ibk-main-color);
+            font-weight: 800;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 0.7rem;
+            i {
+              display: block;
+              width: 2rem;
+              height: 2rem;
+              background-image: url(../images/icon_line_b.svg);
+              background-position: 1100% auto;
+              background-size: 1100%;
+            }
+          }
+
+          small {
+            color: var(--ibk-secondary-color);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  html {
+    font-size: 9px;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  footer {
+    .footer-bottom {
+      > div > div {
+        display: block;
+        .smart-wrap {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* 본문제목 24px
+    하단 푸터 12~11px
+  */
+  html {
+    font-size: 8px;
+  }
+}
+
+/* 280까지 폴더블 */
