after 로 굴곡 만들기

--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,12 @@ header {
 
 /* main */
 .cm-wrap {
+  padding: 7rem 0;
   .cm-top-wrap {
     display: flex;
     justify-content: space-between;
+    gap: 3rem;
+    margin-bottom: 7rem;
     .cm-top-left {
       width: calc(100% / 3 * 2);
 
@@ -149,6 +152,7 @@ header {
         border-radius: 5rem 5rem 5rem 10rem;
         min-height: 500px;
         height: 50rem;
+
         .cm-slider-list-text {
           height: 100%;
           li {
@@ -178,6 +182,7 @@ header {
         }
         .cm-slider-list-img {
           position: absolute;
+
           width: 50%;
           right: 0;
           top: 0;
@@ -227,6 +232,7 @@ header {
         }
       }
     }
+
     .cm-top-right {
       width: calc(100% / 3);
       ul {
@@ -252,6 +258,87 @@ header {
             }
           }
         }
+      }
+    }
+  }
+  .cm-bottom-wrap {
+    .cm-info-list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 3rem;
+
+      li {
+        a {
+          position: relative;
+          display: block;
+          width: 100%;
+          height: 100%;
+          background: var(--ibk-main-bg-color);
+          padding: 3.5rem;
+          border-radius: 4rem;
+          strong {
+            font-size: 2.5rem;
+            color: var(--ibk-main-color);
+          }
+          .cm-more-btn {
+            width: 7.5rem;
+            height: 7.5rem;
+            border-radius: 4rem 0 0 0;
+            background: red;
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            i {
+              display: block;
+              width: 6rem;
+              height: 6rem;
+              background: black;
+              border-radius: 50%;
+              position: absolute;
+              right: 0;
+              bottom: 0;
+              z-index: 10;
+            }
+            i::after {
+              content: '';
+              display: block;
+              width: 2.8rem;
+              height: 2.8rem;
+              background-image: url(../images/icon_line_w.svg);
+              background-size: 1100%;
+              background-position: 0 -30.8rem;
+
+              position: absolute;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%) rotate(45deg);
+            }
+          }
+          .cm-more-btn::before,
+          .cm-more-btn::after {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 8rem;
+            height: 8rem;
+            border-radius: 50%;
+            background-color: #0055a2;
+            bottom: 7.5rem;
+            box-shadow: 4rem 4rem 0 0 red;
+          }
+          .cm-more-btn::before {
+            bottom: 0;
+            left: -8rem;
+            box-shadow: 4rem 4rem 0 0 blue;
+          }
+        }
+      }
+      li:first-child {
+        grid-row: 1/3;
+      }
+      li:nth-child(2) {
+        grid-row: 1/3;
       }
     }
   }
@@ -295,7 +382,7 @@ footer {
         display: block;
         width: 4px;
         height: 4px;
-        background-color: red;
+        background-color: var(--ibk-secondary-color);
         position: absolute;
         right: -2rem;
         top: 50%;
@@ -363,6 +450,14 @@ footer {
 }
 
 @media screen and (max-width: 980px) {
+  .cm-wrap {
+    .cm-bottom-wrap {
+      .cm-info-list {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+  }
+
   footer {
     .footer-bottom {
       > div > div {
